--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,12 @@ p {
   font-size: 16px;
 }
 
+.number:hover {
+  background-color: hsl(25, 97%, 53%);
+  color: white;
+  cursor: pointer;
+}
+
 #submit {
   margin-top: 24px;
   border-radius: 50px;
@@ -80,4 +86,10 @@ p {
   font-size: 14px;
   letter-spacing: 2px;
   padding: 12px 
+}
+
+#submit:hover {
+  color: hsl(25, 97%, 53%);
+  background-color: white;
+  cursor: pointer;
 }
