--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ p {
   border: none;
   font-size: 14px;
   letter-spacing: 2px;
-  padding: 12px 
+  padding: 14px 
 }
 
 #submit:hover {
@@ -97,3 +97,8 @@ p {
   cursor: pointer;
 }
 
+
+#value-selected {
+  background-color: lightgray;
+  color: white;
+}
